--- a/test/.config
+++ b/test/.config
@@ -2888,7 +2888,7 @@ CONFIG_PACKAGE_kmod-backlight=y
 # CONFIG_PACKAGE_kmod-backlight-pwm is not set
 CONFIG_PACKAGE_kmod-drm=y
 CONFIG_PACKAGE_kmod-drm-kms-helper=y
-# CONFIG_PACKAGE_kmod-drm-lima is not set
+CONFIG_PACKAGE_kmod-drm-lima=y
 CONFIG_PACKAGE_kmod-drm-panfrost=y
 CONFIG_PACKAGE_kmod-drm-rockchip=y
 CONFIG_PACKAGE_kmod-drm-sched=y
